Revision history for Net-XMPP2

0.12
         - added samples/display_my_avatar
         - added support for XEP-0054 (vCard) and added a test for it (z_07_vcard.t)
         - replaced the big and unmaintainable MUC test by some smaller
           tests.
         - fixed a bug with disconnect event propagation by Net::XMPP2::Client
         - added a socket_timeout argument to Net::XMPP2::Connection and
           added an interface for setting it to ::SimpleConnection.
         - fixed a serious bug in the split_jid regex, and added a test for
           split_jid
         - fixed a few connection error bugs in Net::XMPP2::Client and the
           SimpleConnection class.

0.11 Fri Mar 21 03:00:58 CET 2008
         - tweaked tests a bit
         - and added use strict to some modules
         - fixed a small oversight in Ext::Version w.r.t. to 'use strict'
         - added the pod-coverage test
         - added some more MUC functions (Net::XMPP2::Ext::MUC::Room::get_users)
         - added nickcollision callback
         - fixed some errors in the documentation
         - added a xmpp_datetime_as_timestamp utility function
         - fixed a minor documentation bug in Net::XMPP2::Client
         - removed the init method from the public interface and made
           the stream initiation implicit on connect.

0.10 Wed Dec 12 15:38:58 CET 2007
         - implemented conversation/chat session tracking,
           see Net::XMPP2::Client::send_message and
           Net::XMPP2::IM::Account::send_tracked_message.
         - fixed a race condition with the account adding routine
           of Net::XMPP2::Client.
         - also fixed a small bug in stream initiation, Net::XMPP2 now
           sends a xml declaration again.
         - implemented a very old authentication method which makes Net::XMPP2
           now also work with jabberd 1.4.2. See also the
           'disable_old_jabber_authentication' option in Net::XMPP2::Connection